--- a/firebase.json
+++ b/firebase.json
@@ -9,7 +9,7 @@
     "rewrites": [
       {
         "source": "**",
-        "destination": "html/darwinsArrows.html"
+        "destination": "/index.html"
       }
     ]
   }
